Подготовка к скриншотап для диплома. Скриншот 4

--- a/app/assets/stylesheets/main.sass
+++ b/app/assets/stylesheets/main.sass
@@ -262,10 +262,17 @@ $percents: (90 85 80 75 70 65 60 55 50 40 30 20 10 5)
     font-family: 'Intro'
     background-color: $navbar-inverse-bg
     padding: 10px
+    margin: 2px
   &.label-green
     font-family: 'Intro'
     background-color: $brand-success
     padding: 10px
+    margin: 2px
+  &.label-yellow
+    font-family: 'Intro'
+    background-color: $brand-warning
+    padding: 10px
+    margin: 2px
 .bottom20
   margin-bottom: 20px
 
